--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>silvana</title>
+		<title>Lab Inn 2</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>HOLA SOY SILVANA    </h1>
+								<h1>HOLA SOY JUAN   </h1>
 							</header>
 							<div class="content">
 								<p>ESTE PAGINA ES PARA QUE PUEDAN VER LOS PROYECTOS DE LOS ALUMNOS DE <a href="https://www.toulouselautrec.edu.pe/">TOULOUSE</a></p>
