--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landing -silvana</title>
+		<title>Landing -juan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
